# rss-to-wallabag

./: .gitignore  Cargo.toml  LICENSE  sample-rss-config.json
src/: config.rs  fetch_feeds.rs  main.rs  rss.rs  wallabag.rs  wallabag_api.rs
