[package]
name = "rss-to-wallabag"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0"
quick-xml = { version = "0.39.4", features = ["serialize"] }
tokio = { version = "1.52.3",  features = ["rt", "macros", "rt-multi-thread"] }
